--- a/styles/main.css
+++ b/styles/main.css
@@ -7,8 +7,7 @@ html
  
 body 
 { 
-    background: radial-gradient(ellipse at 100px 50px, #6C6C89 0%, 
-#28285E 100%); 
+    background: radial-gradient(ellipse at 100px 50px, #6C6C89 0%, #28285E 100%); 
     color: white; 
     overflow: hidden; 
 } 
@@ -203,4 +202,49 @@ body
     width: 100%; 
     position: relative; 
     top: -2px; 
+}
+.tileItem 
+{ 
+    width: 52px; 
+    height: 52px; 
+    background: gainsboro; 
+    border: solid 1px black; 
+    border-radius: 6px; 
+    float: left; 
+    margin-right: 4px; 
+    cursor: pointer; 
+} 
+ 
+.playerRack .tileItem 
+{ 
+    background: white; 
+} 
+ 
+.playerRack .tileItem:hover 
+{ 
+    background: palegreen; 
+} 
+ 
+.tileLetter 
+{ 
+    font-family: "Libre Baskerville"; 
+    font-size: 200%; 
+    color: black; 
+    position: relative; 
+    top: 26px; 
+    pointer-events: none; 
+    display: inline-block; 
+    width: 52px; 
+    text-align: center; 
+} 
+ 
+.tilePoints 
+{ 
+    position: relative; 
+    top: 38px; 
+    left: 38px; 
+    color: black; 
+    font-weight: bold; 
+    pointer-events: none; 
+    font-size: 80%; 
 } 
