--- a/styles/main.css
+++ b/styles/main.css
@@ -271,4 +271,198 @@ body
     margin-right: 2px; 
     pointer-events: none; 
     cursor: default; 
+}
+.mainMenu  
+{ 
+    position: absolute; 
+    width: 1200px; 
+    height: 900px; 
+    background: orange; 
+    z-index: 10; 
+    border: solid 6px white; 
+    border-radius: 12px; 
+}
+.mainMenu .gameLogo 
+{ 
+    display: inline-block; 
+    width: 64px; 
+    vertical-align: top; 
+    position: relative; 
+    left: 4px; 
+    top: 4px; 
 } 
+ 
+.mainMenu .gameTitle 
+{ 
+    font-family: Libre Baskerville; 
+    font-weight: bold; 
+    font-size: 250%; 
+    width: 88%; 
+    display: inline-block; 
+    text-align: center; 
+    color: #631111; 
+    line-height: 2; 
+    text-shadow: 2px 2px 4px black; 
+} 
+ 
+.mainMenu .helpContainer 
+{ 
+    position: absolute; 
+    top: 70px; 
+    width: 98%; 
+    height: 68%; 
+    border-top: solid 8px #611111; 
+    left: 1%; 
+    border-bottom: solid 8px #611111; 
+} 
+ 
+.mainMenu .helpContainer p, .mainMenu .helpContainer li 
+{ 
+    color: black; 
+    font-family: Comfortaa; 
+    font-size: 120%; 
+    line-height: 1.5; 
+    text-align: justify; 
+} 
+ 
+.mainMenu .helpContainer span img 
+{ 
+    width: 24px; 
+} 
+ 
+.mainMenu .gameOptions 
+{ 
+    width: 98%; 
+    height: 20%; 
+    position: absolute; 
+    top: 78%; 
+    left: 1%; 
+} 
+ 
+.mainMenu .createGame 
+{ 
+    display: inline-block; 
+    width: 68%; 
+    height: 98%; 
+    border-right: solid 6px #611111; 
+    vertical-align: top; 
+    font-family: Comfortaa; 
+    font-size: 90%; 
+    color: black; 
+} 
+ 
+.mainMenu .createGame fieldset 
+{ 
+       border: none; 
+      padding: 0; 
+       padding-top: 4px; 
+    height: 20px; 
+} 
+ 
+.mainMenu .createGame fieldset label  
+{ 
+    display: inline-block; 
+    width: 126px; 
+} 
+ 
+.mainMenu .createGame fieldset[data-id="1"] input, .player_1  
+{ 
+    background: tomato; 
+} 
+ 
+.mainMenu .createGame fieldset[data-id="2"] input, .player_2 
+{ 
+    background: dodgerblue; 
+} 
+ 
+.mainMenu .createGame fieldset[data-id="3"] input, .player_3  
+{ 
+    background: lightgreen; 
+} 
+ 
+.mainMenu .createGame fieldset[data-id="4"] input, .player_4 
+{ 
+    background: gold; 
+} 
+ 
+.gameName 
+{ 
+    margin-bottom: 18px; 
+} 
+ 
+.gameName label 
+{ 
+    width: 300px !important; 
+} 
+ 
+.gameName input 
+{ 
+    width: 400px; 
+} 
+ 
+.mainMenu .chkPlayer 
+{ 
+    width: 22px; 
+    height: 22px; 
+    vertical-align: middle; 
+} 
+ 
+.mainMenu .continueGame 
+{ 
+    display: inline-block; 
+    width: 30%; 
+    height: 98%; 
+    vertical-align: top; 
+    font-family: Comfortaa; 
+    font-size: 110%; 
+    color: black; 
+} 
+ 
+.mainMenu .gamePlayersInfo 
+{ 
+    width: 50%; 
+    display: inline-block; 
+    vertical-align: top; 
+} 
+ 
+.mainMenu .playerDisabled 
+{ 
+    color: #ad9c9c; 
+    text-decoration: line-through; 
+} 
+ 
+.mainMenu .gameLaunchButtons 
+{ 
+    display: inline-block; 
+    width: 39%; 
+    vertical-align: top; 
+} 
+ 
+.mainMenu .gameLaunchButtons button 
+{ 
+    width: 98%; 
+    left: 1%; 
+    border-radius: 6px; 
+    margin-bottom: 6px; 
+    height: 50px; 
+    cursor: pointer; 
+} 
+ 
+#modeChoice 
+{ 
+    position: absolute; 
+    bottom: 6px; 
+    left: 60px; 
+} 
+ 
+#modeChoice input 
+{ 
+    width: 22px; 
+    height: 22px; 
+    vertical-align: text-bottom; 
+} 
+ 
+#modeChoice:disabled label 
+{ 
+    color: #ad9c9c; 
+}  
